2008-04-26  Brian Gough  <bjg@network-theory.co.uk>

	* miser.c (gsl_monte_miser_integrate): catch zero weights to avoid
	division by zero

	* test.c (main): added test for step-type function

2004-06-02  Brian Gough  <bjg@network-theory.co.uk>

	* test_main.c: handle the case where sd==0 && error[i] !=0 more
	carefully

Mon Apr 23 13:23:47 2001  Brian Gough  <bjg@network-theory.co.uk>

	* test_main.c: removed unused status variable

Sat Jan  6 19:56:49 2001  Brian Gough  <bjg@network-theory.co.uk>

	* miser.c (gsl_monte_miser_free): fixed memory leak for s->hits_{r,l}

	* vegas.c (gsl_monte_vegas_free): fixed memory leak for s->x

Fri Dec 22 21:43:04 2000  Brian Gough  <bjg@network-theory.co.uk>

	* miser.c: removed max-min estimation method for subvolumes. We
 	will use the standard variance method and try to use a sufficient
 	number of points to estimate the variance reliably.

Wed Dec 20 21:32:40 2000  Brian Gough  <bjg@network-theory.co.uk>

	* vegas.c: tidied up the algorithm, deal with cases of sigma = 0
 	explicitly.

Sat Dec  9 14:19:53 2000  Brian Gough  <bjg@network-theory.co.uk>

	* reorganization and clean up

Thu Nov 16 19:50:27 2000  Brian Gough  <bjg@network-theory.co.uk>

	* miser.c: rewrite to fix overflows and make calling conventions
 	consistent 

	* plain.c: rewrite to fix overflows and make calling conventions
 	consistent

Thu Oct 26 20:06:36 2000  Brian Gough  <bjg@network-theory.co.uk>

	* plain.c (gsl_monte_plain_integrate): integer factor
 	calls*(calls-1) used in numerical expression can easily overflow,
 	changed to calls*(calls-1.0).
	
Sat Oct 21 20:36:06 2000  Brian Gough  <bjg@network-theory.co.uk>
 
        * miser.c (gsl_monte_miser_integrate): fixed bug where hits_l was
        used in place of hits_r

Tue Sep 19 19:16:37 2000  Brian Gough  <bjg@network-theory.co.uk>

	* plain.c (gsl_monte_plain_alloc): initialise check_done to avoid
 	warning about use of unitialised memory

	* vegas.c (gsl_monte_vegas_alloc): as above
